fixed p tag alignment and picture alignment

--- a/src/client/css/home.css
+++ b/src/client/css/home.css
@@ -4,10 +4,14 @@
   padding: 10px;
   border: 2px solid black;
   margin-top: 5px;
-  margin-right: -30px;
+  margin-right: -80px;
 }
 
 h2  {
+  text-align: center;
+}
+
+p {
   text-align: center;
 }
 
